--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,14 @@
-<div class="hero-unit">
-	<h1>Welcome to Whojam</h1>
-	<p>
-		Whojam allows musicians to create music collaboratively.<br>
-		Discover our blog : <%= link_to "whojamlive", "http://www.whojamlive.com" %>
-	</p>
-	<p>
-		<%= link_to "Sign up now", "#", class: "btn btn-primary btn-large" %></a>
-	</p>
-</div>
+<% if user_signed_in? %>
+	<h1>You're logged in!</h1>
+<% else %>
+	<div class="hero-unit">
+		<h1>Welcome to Whojam</h1>
+		<p>
+			Whojam allows musicians to create music collaboratively.<br>
+			Discover our blog : <%= link_to "whojamlive", "http://www.whojamlive.com" %>
+		</p>
+		<p>
+			<%= link_to "Sign up now", new_user_registration_path, class: "btn btn-primary btn-large" %></a>
+		</p>
+	</div>
+<% end %>
